examples/v0.4/errors/constant_map_mutation.nova
User: M = {
    name: S
}

admin:: User = {
    name = "Root"
}

admin.name = "Hack"

/*
Expected Error:

Cannot modify immutable collection.
*/